--- a/PHSach/Views/Inventory_Book/Index.cshtml
+++ b/PHSach/Views/Inventory_Book/Index.cshtml
@@ -74,7 +74,7 @@
                                     <td>@item.Book_id</td>
                                     <td>@item.Book.Book_name</td>
                                     <td>@item.Quantity</td>
-                                    <td>@item.UpdatedDate.Value.ToString("dd/MM/yyyy hh:mm:ss tt")</td> 
+                                    <td>@item.UpdatedDate.Value.ToString("dd/MM/yyyy HH:mm:ss")</td> 
                                 </tr>
                             }
                     </tbody>
