--- a/PHSach/Views/Debt_Agency/Index.cshtml
+++ b/PHSach/Views/Debt_Agency/Index.cshtml
@@ -47,7 +47,7 @@
                             <td>@Html.DisplayFor(c => item.Agency_id)</td>
                             <td>@Html.DisplayFor(c => item.Agency.Agency_name)</td>
                             <td>@Html.DisplayFor(c => item.debt)</td>
-                            <td>@item.update_date.Value.ToString("dd/MM/yyyy hh:mm:ss tt")</td>
+                            <td>@item.update_date.Value.ToString("dd/MM/yyyy HH:mm:ss")</td>
                         </tr>
                     }
                 </tbody>
@@ -88,7 +88,7 @@
                             }
                             else {
                                 $.each(newdata, function (i, item) {
-                                    $('.agency-body').append('<tr><td>' + item.id + '</td><td>' + item.name + '</td><td>' + item.debt + '</td><td>' + new Date(item.updatedate).toString("dd/MM/yyyy hh:mm:ss tt") + '</td><tr>');
+                                    $('.agency-body').append('<tr><td>' + item.id + '</td><td>' + item.name + '</td><td>' + item.debt + '</td><td>' + new Date(item.updatedate).toString("dd/MM/yyyy HH:mm:ss") + '</td><tr>');
                                 });
                             }
                            
