add inventory _agency

--- a/PHSach/Views/Shared/_Layout.cshtml
+++ b/PHSach/Views/Shared/_Layout.cshtml
@@ -85,6 +85,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="#" class="hvr-bounce-to-right"><i class="fa fa-list nav_icon"></i> <span class="nav-label">Tồn kho</span><span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li><a href="/Inventory_Book/" class="hvr-bounce-to-right"><i class="fa fa-align-left nav_icon"></i>Tồn kho của công ty</a></li>
+                                <li><a href="/Inventory_Agency/" class="hvr-bounce-to-right"><i class="fa fa-align-left nav_icon"></i>Tồn kho của của đại lý</a></li>
                             </ul>
                         </li>
 
