--- a/PHSach/Views/Inventory_Agency/Index.cshtml
+++ b/PHSach/Views/Inventory_Agency/Index.cshtml
@@ -1,123 +1,178 @@
-﻿
+﻿@model PHSach.Models.Inventory_Agency
 @{
-    ViewBag.Title = "StatisticNXB";
+    ViewBag.Title = "Index";
+    
 }
-
-@model IEnumerable<PHSach.Models.Debt_NXB>
-
-@{
-    ViewBag.Title = "Công nợ của đại lý ";
-}
-
-<form class="form-inline">
     <div class="col-md-12 panel panel-primary">
-        <div class="panel-heading">Tìm kiếm Công Nợ của Nhà xuất bản</div>
+        <div class="panel-heading">Tìm kiếm lịch sử tồn kho đại lý</div>
         <div class="panel-body ">
-            <div class="col-md-5 nxb">
-                <label for="keyword">Nhà xuất bản :</label>
-                <input class="form-control" id="keyword" type="text" placeholder="Nhập mã hoặc tên nhà xuất bản" style="width:270px;">
-            </div>
-            <div class="col-md-4">
-                <label for="choosedate"> Thời điểm : </label>
-                <input type="date" class="form-control" id="choosedate" style="width:170px">
-            </div>
-            <div class="col-md-3">
-                <button type="button" class="btn btn-info btnseach" style="margin-right:15px;"><i class="fa fa-search"></i> Tìm kiếm </button>
-                <button type="button" class="btn btn-info btnrefresh"><i class="fa fa-refresh"></i> Làm mới </button>
-            </div>
-        </div>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="col-md-12">
+                    <div class="col-md-6">
+                        <label for="madaily">Đại lý</label>
+                        <select class="form-control" id="madaily" style="width:300px;">
+                            <option value="-1" selected>-----chọn đại lý-----</option>
+                            @foreach(var item in (Dictionary<int, string>)ViewBag.agency)
+                            {
+                                <option value="@item.Key">@item.Value</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="col-md-6 sach">
+                        <label for="masach">Sách:</label>
+                        <select class="form-control" id="masach" >
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-12" style="margin-top:10px;">
+                    <div class="col-md-4">
+                        <label for="choosedate"> Chọn ngày : </label>
+                        <input class="form-control" id="choosedate" type="date"  />
+                    </div>
+                    <div class="col-md-4" style="margin-top:25px;">
+                        <button type="button" class="btn btn-info btnseach"><i class="fa fa-search" ></i> Tìm kiếm </button>
+                        <button type="button" class="btn btn-info btnrefresh"  style="margin-left:15px;"><i class="fa fa-refresh"></i> Làm mới </button>
+                    </div>
+                </div>
+            }
+            
     </div>
-</form>
-
-
-<div class="col-md-12 panel panel-info">
-    <div class="panel-heading">Cập nhật công nợ  mới nhất của Nhà xuất bản</div>
+<div class="col-md-12 panel panel-primary">
+    <div class="panel-heading">Kết quả tìm kiếm</div>
+    <div class="noti alert alert-info" style="margin-top:10px;display:none"></div>
     <div class="panel-body">
-        <div class="col-md-12 div-nxb">
-            <table class="table table-bordered table-hover table-nxb">
+        <form class="form-inline">
+            <div class="col-md-12  div_Masach">
+                <div class="col-sm-4 form-group">
+                    <label for="book_id"><b>Mã sách:</b></label>
+                    <input class="form-control" id="book_id" type="text" disabled value="">
+                </div>
+                <div class="col-sm-8 form-group">
+                    <label for="book_name"><b>Tên sách :</b></label>
+                    <input class="form-control" id="book_name" type="text" disabled value="" style="width:400px">
+                </div>
+            </div>
+            <div class="col-md-12 div_soluong" style="margin-top:10px;">
+                <div class="col-sm-4 form-group">
+                    <label for="quantity"><b>Số lượng tồn :</b></label>
+                    <input class="form-control" id="quantity" type="number" disabled value="" style="width:140px;">
+                </div>
+                <div class="col-sm-8 form-group">
+                    <label for="updatedate"><b>Ngày cập nhật gần nhất :</b></label>
+                    <input class="form-control" id="updatedate" type="text" disabled value="" style="width:302px;">
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="col-md-12 panel panel-info">
+    <div class="panel-heading">Tồn Kho</div>
+    <div class="panel-body">
+
+        <div class="col-md-12 ">
+            <table class="table table-bordered table-hover" style="overflow:scroll">
                 <thead>
                     <tr>
-                        <th>Mã Nhà xuất bản</th>
-                        <th>Tên Nhà xuất bản</th>
-                        <th>Nợ cần trả nhà xuất bản</th>
+                        <th>Mã đại lý</th>
+                        <th>Tên đại lý</th>
+                        <th>Tên sách</th>
+                        <th>Số lượng tồn</th>
                         <th>Ngày cập nhật mới nhất</th>
                     </tr>
                 </thead>
-                <tbody class="nxb-body">
-                    @foreach (var item in Model)
+                <tbody>
+                    @foreach(var item in (List<PHSach.Models.Inventory_Agency>)ViewBag.listbook)
                     {
                         <tr>
-                            <td>@Html.DisplayFor(c => item.NXB_id)</td>
-                            <td>@Html.DisplayFor(c => item.NXB.NXB_name)</td>
-                            <td>@Html.DisplayFor(c => item.debt)</td>
-                            <td>@item.update_date.ToString("dd/MM/yyyy HH:mm:ss")</td>
+                            <td>@item.Agency_id</td>
+                            <td>@item.Agency.Agency_name</td>
+                            <td>@item.Book.Book_name</td>
+                            <td>@(item.deliver_quantity-item.repay_quantity)</td>
+                            <td>@item.UpdatedDate</td>
+
                         </tr>
                     }
+
                 </tbody>
             </table>
         </div>
     </div>
 </div>
 <script>
-  $(document).ready(function () {
-        $('.btnseach').click( function () {
-            var keyword = $('#keyword').val();
-            var date = $('#choosedate').val();
-            $('.noti').hide();
-            if (keyword.length === 0)
-            {
-                alert("Nhập mã  hoặc tên nhà xuất bản cần tìm !");
+    $(document).ready(function () {
+        $('#madaily').change(function () {
+            var id = $(this).val();
+            $("#masach option").remove();
+            $.ajax({
+                url: "/Inventory_Agency/listbookbyagency" + "/" + id,
+                type: "GET",
+                success: function (data) {
+                    $.each(data, function (i, item) {
+                        $("#masach").append('<option value=' + item.id + '>' + item.name + '</option>');
 
-            }
-
-            else
-            {
-                if (date.length === 0)
-                {
-                    alert("Nhập ngày cần tìm !");
-                }
-                else
-                {
-                    $.ajax({
-                        url: "/Debt_NXB/debtcalculate",
-                        data: { keyword: keyword, date: date },
-                        type: "GET",
-                        success: function (data) {
-
-                            $('.nxb-body > tr').remove();
-                            var newdata = $.parseJSON(data);
-                            if (newdata.length===0)
-                            {
-                                $('.nxb-body').append('<tr><td colspan="4">Không có dữ liệu hoặc tại thời điểm chọn chưa nợ nhà xuất bản !</td></tr>');
-                            }
-                            else {
-                                $.each(newdata, function (i, item) {
-                                    $('.nxb-body').append('<tr><td>' + item.id + '</td><td>' + item.name + '</td><td>' + item.debt + '</td><td>' + new Date(item.updatedate).toString("dd/MM/yyyy HH:mm:ss") + '</td><tr>');
-                                });
-                            }
-
-                        }
                     });
                 }
+            });
+            
+            
+        });
 
+        $('.btnseach').click( function () {
+            var date = $('#choosedate').val();
+            madaily = $('#madaily').val();
+            masach = $('#masach').val();
+            $('.noti').hide();
+            if (date.length === 0)
+            {
+                alert("Nhập ngày cần tìm !");
             }
+            else
+            {
+                $.ajax({
+                    url: "/Inventory_Agency/HistoryAgency",
+                    data: { madaily:madaily, masach: masach, choosedate: date },
+                    dataType: "json",
+                    type: "POST",
+                    success: function (data) {
+                        if (typeof(data['id'])!== 'undefined')
+                        {
+                            $('#book_id').val(data['id']);
+                            $('#book_name').val(data['bookname']);
+                            $('#quantity').val(data['quantity']);
+                            $('#updatedate').val(data['updatedate']);
+                        }
+                        else
+                        {
+                            $('.noti').html(" Không tìm thấy dữ liệu theo yêu cầu ! ");
+                            $('.noti').css('display', 'block');
+                            $('#book_id').val("");
+                            $('#book_name').val("");
+                            $('#quantity').val("");
+                            $('#updatedate').val("");
+                        }
+                    },
+                    error: function (a, b, c) {
+
+                    }
+                });
+            }
+            
 
         });
         $('.btnrefresh').click(function () {
-            $.ajax({
-                url: "/Debt_NXB/all",
-                dataType: "json",
-                type: "GET",
-                success: function (data) {
-                    $('.nxb-body > tr').remove();
-                    var newdata = $.parseJSON(data);
-                    $.each(newdata, function (i, item) {
-                        $('.nxb-body').append('<tr><td>' + item.id + '</td><td>' + item.name + '</td><td>' + item.debt + '</td><td>' + new Date(item.updatedate).toString("dd/MM/yyyy hh:mm:ss tt") + '</td><tr>');
-                    });
-                },
-            });
+            $('#book_id').val("");
+            $('#book_name').val("");
+            $('#quantity').val("");
+            $('#updatedate').val("");
+            $('.noti').html("");
+            $('.noti').css('display', 'none');
+            $('#madaily').prop('selectedIndex', 0);
+            $("#masach option").remove();
+            $('#choosedate').val("");
         });
-
+        
   });
 </script>
-
