--- a/PHSach/Views/Debt_NXB/index.cshtml
+++ b/PHSach/Views/Debt_NXB/index.cshtml
@@ -6,7 +6,7 @@
 @model IEnumerable<PHSach.Models.Debt_NXB>
 
 @{
-    ViewBag.Title = "Công nợ của đại lý ";
+    ViewBag.Title = "Công nợ của nhà xuất bản ";
 }
 
 <form class="form-inline">
@@ -83,14 +83,13 @@
                         data: { keyword: keyword, date: date },
                         type: "GET",
                         success: function (data) {
-
                             $('.nxb-body > tr').remove();
-                            var newdata = $.parseJSON(data);
-                            if (newdata.length===0)
+                            if (!data.length)
                             {
                                 $('.nxb-body').append('<tr><td colspan="4">Không có dữ liệu hoặc tại thời điểm chọn chưa nợ nhà xuất bản !</td></tr>');
                             }
                             else {
+                                var newdata = $.parseJSON(data);
                                 $.each(newdata, function (i, item) {
                                     $('.nxb-body').append('<tr><td>' + item.id + '</td><td>' + item.name + '</td><td>' + item.debt + '</td><td>' + new Date(item.updatedate).toString("dd/MM/yyyy HH:mm:ss") + '</td><tr>');
                                 });
