--- a/PHSach/Views/NXBs/Create.cshtml
+++ b/PHSach/Views/NXBs/Create.cshtml
@@ -21,12 +21,12 @@
                 </div>
                 <div class="col-sm-3 form-group">
                     <label for="disabledInput">Điện thoại</label>
-                    @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control", @type="number" } })
                     @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-sm-3 form-group">
                     <label for="email">Số tài khoản:</label>
-                    @Html.EditorFor(model => model.AcountNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.AcountNumber, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
                     @Html.ValidationMessageFor(model => model.AcountNumber, "", new { @class = "text-danger" })
                 </div>
             </div>
