--- a/PHSach/Views/NXBs/Edit.cshtml
+++ b/PHSach/Views/NXBs/Edit.cshtml
@@ -33,15 +33,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AcountNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
-                @Html.EditorFor(model => model.AcountNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.AcountNumber, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
                 @Html.ValidationMessageFor(model => model.AcountNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2"})
             <div class="col-md-4">
-                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
                 @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
             </div>
         </div>
